add translations for alt attributes

--- a/src/app/core/login/containers/update-password.component.html
+++ b/src/app/core/login/containers/update-password.component.html
@@ -35,7 +35,7 @@
         <a href="javascript:void(0)" (click)="goTo('login')" class="nav-link" role="button" aria-haspopup="true" aria-expanded="false" i18n>I already remember the passoword :)</a>
     </small>
     </div>
-    <img class="login-img" alt="login image" src="assets/img/login/undraw_travelers.svg">
+    <img class="login-img" i18n-alt="@@altLoginImage" alt="decorative login image of mysuitcase" src="assets/img/login/undraw_travelers.svg">
   </form>
 
 <footer-component></footer-component>
