--- a/src/app/core/settings/containers/settings.component.html
+++ b/src/app/core/settings/containers/settings.component.html
@@ -85,5 +85,5 @@
         </div>      
     </div>
 </form>
-<img class="settings-img" alt="login image" src="assets/img/settings/settings.PNG">
+<img class="settings-img" i18n-alt alt="Decorative image of settings page" src="assets/img/settings/settings.PNG">
 <footer-component></footer-component>
