--- a/src/app/core/shared/not-found/not-found.component.html
+++ b/src/app/core/shared/not-found/not-found.component.html
@@ -7,7 +7,7 @@
         <a class="button button-hero mt-4" href="#" i18n="@@back_button">Go back</a>
       </div>
       <div class="col-md-6 col-lg-7 col-xl-6 offset-xl-1">
-        <img class="img-fluid" src="assets/img/404/404.svg" alt="">
+        <img class="img-fluid" src="assets/img/404/404.svg" i18n-alt  alt="Not found page image">
       </div>
     </div>
   </div>
