--- a/src/app/core/shared/working-in-progress/working-in-progress.component.html
+++ b/src/app/core/shared/working-in-progress/working-in-progress.component.html
@@ -24,7 +24,7 @@
           <div class="">
             <input name="EMAIL" placeholder="Email Address" onfocus="this.placeholder = ''"
               onblur="this.placeholder = 'Email Address '" required="" type="email">
-            <button class="btn bb-btn"><img src="https://img.icons8.com/dotty/29/000000/send-mass-email.png" /></button>
+            <button class="btn bb-btn"><img src="https://img.icons8.com/dotty/29/000000/send-mass-email.png" i18n-alt alt="image to send email due to a problem"/></button>
           </div>
           <div class="mt-10 info"></div>
         </form>
