--- a/src/app/public/home/containers/create-suitcase-form/create-suitcase-form.component.html
+++ b/src/app/public/home/containers/create-suitcase-form/create-suitcase-form.component.html
@@ -41,7 +41,7 @@
       <div #mapContainer id='map'></div>
 
       <div id="infowindow-content">
-        <img src="" width="16" height="16" id="place-icon" />
+        <img src="" width="16" height="16" id="place-icon" i18n-alt alt="Icon of the chosen place"/>
         <span id="place-name" class="title"></span><br />
         <span id="place-address"></span>
       </div>
