--- a/src/app/core/login/containers/login.component.html
+++ b/src/app/core/login/containers/login.component.html
@@ -31,7 +31,7 @@
       </ng-template>
     </small>
   </div>
-  <img class="login-img" alt="login image" src="assets/img/login/undraw_travelers.svg">
+  <img class="login-img" i18n-alt="@@altLoginImage" alt="decorative login image of mysuitcase" src="assets/img/login/undraw_travelers.svg">
 </form>
 
 <footer-component></footer-component>
