--- a/src/app/core/shared/footer/containers/footer.component.html
+++ b/src/app/core/shared/footer/containers/footer.component.html
@@ -7,7 +7,7 @@
           Copyright MySuitcase © {{fullYear}}
           <span i18n>All rights reserved</span>  |
           <span i18n>Website made by </span><a href="http://www.linkedin.com/in/alejandro-mg-026a2a2b" target="_blank">Alejandro Manso</a> |
-          Template by <a href="https://colorlib.com" target="_blank">Colorlib</a> |
+          Template by <a href="https://colorlib.com" rel="noreferrer" target="_blank">Colorlib</a> |
           <!-- <a href="">Terms of use</a> | -->
           <a href="">Privacy Policy</a> |
           <!-- <a href="">Cookies policy</a> -->
