--- a/src/app/public/register/containers/register.component.html
+++ b/src/app/public/register/containers/register.component.html
@@ -70,7 +70,7 @@
       aria-expanded="false" i18n>I am already registered, I want going back.</a></small>
   </div>
 
-  <img class="register-img" alt="login image" src="assets/img/login/undraw_travelers.svg">
+  <img class="register-img" i18n-alt="@@altLoginImage" alt="decorative login image of mysuitcase" src="assets/img/login/undraw_travelers.svg">
 </form>
 
 <footer-component></footer-component>
