add poster to presentation video

--- a/src/app/public/about/containers/about.component.html
+++ b/src/app/public/about/containers/about.component.html
@@ -5,7 +5,7 @@
     <h1 class="about-title" i18n>What mysuitcase is</h1>
     <!--================Presentation section Start =================-->
     <section class="bg-gray presentation__container">
-      <video controls="controls">
+      <video controls poster="assets/video/poster.png">
         <source [src]="videoSrc" type="video/mp4" />
       </video>
     </section>
