add redirection for nested routes when they come with a token

--- a/src/app/core/login/containers/update-password.component.html
+++ b/src/app/core/login/containers/update-password.component.html
@@ -1,6 +1,6 @@
 <navbar-component></navbar-component>
 
-<form class="form col-lg-6 col-xl-6 offset-xl-1" [formGroup]="updatePasswordForm">
+<form class="form col-lg-6 col-xl-6 offset-xl-1" *ngIf="updatePasswordForm" [formGroup]="updatePasswordForm">
     <div class="search-wrapper">
 
     <mat-form-field class="full-width login-field" appearance="outline">
