--- a/src/app/core/login/containers/login.component.html
+++ b/src/app/core/login/containers/login.component.html
@@ -1,6 +1,6 @@
 <navbar-component></navbar-component>
 
-<form class="form col-lg-6 col-xl-6 offset-xl-1 min-full-height" [formGroup]="loginForm">
+<form class="form col-lg-6 col-xl-6 offset-xl-1 min-full-height" *ngIf="loginForm" [formGroup]="loginForm">
   <div class="search-wrapper">
     <mat-form-field class="full-width login-field" appearance="outline">
       <mat-label>Email</mat-label>
