change label text

--- a/src/app/public/create-suitcase/components/dialog/save-dialog.component.html
+++ b/src/app/public/create-suitcase/components/dialog/save-dialog.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title i18n>Save the suitcase</h2>
 <mat-dialog-content class="mat-typography">
-  <p i18n>Are you sure that you want to save and finish the suitcase?</p>
+  <p i18n>Are you sure that you want to save the suitcase?</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close="false" color="basic" i18n="@@cancel_button">Cancel</button>
