--- a/src/app/public/create-suitcase/components/dialog/save-dialog.component.html
+++ b/src/app/public/create-suitcase/components/dialog/save-dialog.component.html
@@ -3,6 +3,6 @@
   <p i18n>Are you sure that you want to save the suitcase?</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close="false" color="basic" i18n="@@cancel_button">Cancel</button>
-  <button mat-button mat-dialog-close="true" cdkFocusInitial color="warn" i18n="@@save_button">Save</button>
+  <button mat-button [mat-dialog-close]="false" color="basic" i18n="@@cancel_button">Cancel</button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial color="warn" i18n="@@save_button">Save</button>
 </mat-dialog-actions>
