lazy loading img

--- a/src/app/public/home/containers/overview/overview.component.html
+++ b/src/app/public/home/containers/overview/overview.component.html
@@ -7,32 +7,32 @@
           <div class="overview-card" [ngSwitch]="suitcaseList[i].icon">
             <!--mountain-->
             <ng-container *ngSwitchCase="'mountain'">
-              <img class="card-img" src="assets/img/categories/mountain.gif" i18n-alt alt="Image of mountain type of trip">
+              <img class="card-img" loading="lazy" src="assets/img/categories/mountain.gif" i18n-alt alt="Image of mountain type of trip">
             </ng-container>
 
             <!--beach-->
             <ng-container *ngSwitchCase="'beach'">
-              <img class="card-img" src="assets/img/categories/beach.gif" i18n-alt alt="Image of beach type of trip">
+              <img class="card-img" loading="lazy" src="assets/img/categories/beach.gif" i18n-alt alt="Image of beach type of trip">
             </ng-container>
 
             <!--baby-->
             <ng-container *ngSwitchCase="'baby'">
-              <img class="card-img" src="assets/img/categories/baby2.gif" i18n-alt alt="Image of baby type of trip">
+              <img class="card-img" loading="lazy" src="assets/img/categories/baby2.gif" i18n-alt alt="Image of baby type of trip">
             </ng-container>
 
             <!--pet-->
             <ng-container *ngSwitchCase="'pet'">
-              <img class="card-img" src="assets/img/categories/pet.jpeg" i18n-alt alt="Image of pet type of trip">
+              <img class="card-img" loading="lazy" src="assets/img/categories/pet.jpeg" i18n-alt alt="Image of pet type of trip">
             </ng-container>
 
             <!--sport-->
             <ng-container *ngSwitchCase="'sport'">
-              <img class="card-img" src="assets/img/categories/sport.gif" i18n-alt alt="Image of sport type of trip">
+              <img class="card-img" loading="lazy" src="assets/img/categories/sport.gif" i18n-alt alt="Image of sport type of trip">
             </ng-container>
 
             <!--others-->
             <ng-container *ngSwitchDefault>
-              <img class="card-img" src="assets/img/blog/blog-3.png" i18n-alt alt="Image of any other type of trip different from the previous types">
+              <img class="card-img" loading="lazy" src="assets/img/blog/blog-3.png" i18n-alt alt="Image of any other type of trip different from the previous types">
             </ng-container>
 
             <div class="overview-card-overlay">
