--- a/src/app/public/home/containers/home/home.component.html
+++ b/src/app/public/home/containers/home/home.component.html
@@ -126,7 +126,7 @@
             <button class="button button-hero mt-4" (click)="createSuitcase()" i18n>Create new suitcase</button>
           </div>
           <div id="image-area" class="col-md-6 col-lg-7 col-xl-6 offset-xl-1">
-            <img class="img-fluid" src="assets/img/home/undraw_airport.svg" i18n-alt="@@altLoginImage" alt="decorative login image of mysuitcase">
+            <img class="img-fluid" loading="lazy" src="assets/img/home/undraw_airport.svg" i18n-alt="@@altLoginImage" alt="decorative login image of mysuitcase">
           </div>
           <div id="questions-area">
             <my-suitcase-create-suitcase-form></my-suitcase-create-suitcase-form>
@@ -159,7 +159,7 @@
       <div class="row">
         <div class="col-lg-7 col-md-6 mb-4 mb-md-0">
           <div class="about-img">
-            <img class="img-fluid" src="assets/img/home/undraw_world.svg" i18n-alt="@@altLoginImage" alt="decorative login image of mysuitcase">
+            <img class="img-fluid" loading="lazy" src="assets/img/home/undraw_world.svg" i18n-alt="@@altLoginImage" alt="decorative login image of mysuitcase">
           </div>
         </div>
         <div class="col-lg-5 col-md-6 align-self-center about-content">
@@ -188,7 +188,7 @@
           <web-notification-subscriber class="notification__button-container"></web-notification-subscriber>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-10 mb-4 mb-md-0 notification__img-container">
-          <img class="img-fluid" src="assets/img/notifications/notifications.jpg" alt="">
+          <img class="img-fluid" loading="lazy" src="assets/img/notifications/notifications.jpg" alt="">
         </div>
       </div>
     </div>
